--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.25",
     "Buffer": "^0.0.0",
     "bn.js": "^5.2.1",
+    "buffer": "^6.0.3",
     "js-sha3": "^0.9.3",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
