--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3012",
+    "dev": "vite --port 3014",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -26,7 +26,6 @@
     "@solana/wallet-adapter-material-ui": "^0.16.33",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.25",
-    "Buffer": "^0.0.0",
     "bn.js": "^5.2.1",
     "buffer": "^6.0.3",
     "js-sha3": "^0.9.3",
@@ -34,6 +33,7 @@
     "notistack": "^3.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-awesome-reveal": "^4.2.7",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
